# CPP-Game-Systems

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  config.bat
src/: main.cpp
src/collisions/: collider.h
src/entities/: components.h  entity.h
src/input/: input.cpp  input.h
src/meta/: ApplicationContext.cpp  ApplicationContext.h  processing.h
src/player/: player.cpp
src/scene/: MenuScreen.cpp  TestScreen.cpp  scene.h  sceneManager.h
src/types/: types.h
src/ui/: element.cpp
test/: main_test.cpp
test/entities/: entity_test.cpp
